--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/custom-theme.scss", "src/styles.css"]
+            "styles": ["src/styles.css"]
           },
           "configurations": {
             "production": {
